# lidar2image_GAN

./: CMakeLists.txt  Dockerfile  convert_kiti_to_pcd.py  count_pcds.py  model.py  pcd_to_img.py  prep_data_cpp.py  prepare_data.py  read_full_kitti.py  train.py
src/: pc_to_img.cpp  prepare_data.cpp  read_pointcloud.cpp
